fix: fixed issues
- fixed issues where track duration for more than one hour was not showing properly

--- a/src/components/media-track/media-track.component.css
+++ b/src/components/media-track/media-track.component.css
@@ -24,6 +24,7 @@
 
 .media-track-duration-column {
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
